@@ -1,3 +1,9 @@
+2010-07-01  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
+	Extend the test suite.
+
+	* 0_slc/1_createargs/mutable.c: New.
+
 2010-06-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
 	Extend the test suite.
